Changed embed params to t and d, fixed signup system, added upload rate limiter, added system to delete images which were not visited for longer than 15 days'

--- a/Uploader/lapis/html/static/css/signup.css
+++ b/Uploader/lapis/html/static/css/signup.css
@@ -15,6 +15,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     align-items: center;
+    display: inline;
   }
   div .mdl-textfield__label:after {
     background: teal;
@@ -26,10 +27,13 @@
 .mdl-textfield__label{
     color: #fff;
 }
-#emaildiv {
-    position: relative;
-}
+
 h1 {
     text-align: center;
     color: white;
+    position: relative;
+    top: 80px;
+}
+* {
+  overflow: hidden;
 }
